objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active_Membership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Membership</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordType.Name</field>
                <operation>equals</operation>
                <value>Membership</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts (Active membership)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Memberships_Count__c</fullName>
        <label>Active Memberships Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Member_Number__c</fullName>
        <formula>IF(Active_Membership__c &lt;&gt; null, Contact_ID__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Member Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adoption_Date__c</fullName>
        <label>Adoption Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Animal_Breed__c</fullName>
        <label>Animal Breed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Count__c</fullName>
        <label>Animal Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Animal_Type__c</fullName>
        <label>Animal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cat</fullName>
                </value>
                <value>
                    <fullName>Dog</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Animal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Animal</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Animals</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPAY_Biller_Code__c</fullName>
        <label>BPAY Biller Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPAY_CRN__c</fullName>
        <label>BPAY CRN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPAY_Contract_Reference__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <externalId>true</externalId>
        <label>BPAY Contract Reference</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bequest_Pledged_Opportunity_Id__c</fullName>
        <label>Bequest Pledged Opportunity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Of__c</fullName>
        <label>Care Of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <label>Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <formula>IF(Opportunity_Bequest_Pledged_Count__c &gt; 0, IMAGE(&quot;/resource/Icons/custom/custom18.png&quot;, &quot;Pledged Bequestor&quot;, 40, 40),
    IF(Opportunity_Major_Gift_Closed_Won_Count__c &gt; 0, IMAGE(&quot;/resource/Icons/standard/custom17.png&quot;, &quot;Major&quot;, 40, 40),
        IF(Animal_Count__c &gt; 0, IMAGE(&quot;/resource/Icons/custom/custom1.png&quot;, &quot;Adopter&quot;, 40, 40),
            IF(Opportunity_Member_Active_Count__c &gt; 0, IMAGE(&quot;/resource/Icons/custom/custom15.png&quot;, &quot;Member&quot;, 40, 40),
                IF(Opportunity_Raffle_Ticket_Count__c &gt; 0, IMAGE(&quot;/resource/Icons/custom/custom48.png&quot;, &quot;Raffle&quot;, 40, 40),
                    IF(npsp__Deceased__c, IMAGE(&quot;/resource/Icons/standard/default.png&quot;, &quot;Badge&quot;, 40, 40),
                        IF(Active_Membership__c != NULL, IMAGE(&quot;/resource/Icons/custom/custom73.png&quot;, &quot;Volunteer&quot;, 40, 40),&quot;&quot;)
                    )
                )
            )
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Estate_Account_With_Deceased__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Estate Account With Deceased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Donations__c</fullName>
        <label>Count of Donations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_New_Task_For_Birthday_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create New Task For Birthday Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Notified_of_Death__c</fullName>
        <label>Date Notified of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Status_Lapsed__c</fullName>
        <label>Date Status Lapsed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_To_Send_Birthday_Card__c</fullName>
        <formula>IF(TODAY()&gt;DATE(YEAR(TODAY()),MONTH( Birthdate), DAY(Birthdate)), 

(DATE(YEAR(TODAY())+1,MONTH(Birthdate),DAY(Birthdate))) - 12, 

(DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate))) - 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>12 Days Before Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_To_Birthday__c</fullName>
        <formula>IF(TODAY()&gt;DATE(YEAR(TODAY()),MONTH( Birthdate), DAY(Birthdate)), 

(DATE(YEAR(TODAY())+1,MONTH(Birthdate),DAY(Birthdate))) - TODAY(), 

(DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate))) - TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Birthday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deceased_Date__c</fullName>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact_Reason__c</fullName>
        <label>Do Not Contact Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deceased Donor</fullName>
                </value>
                <value>
                    <fullName>Donor Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Mail_From__c</fullName>
        <label>Do Not Mail From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail_To__c</fullName>
        <label>Do Not Mail To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>This field is configured in NPSP Settings &gt; Relationships &gt; Relationships as the Gender field. Do not delete this field unless you remove the reference or select another Gender field there.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Non-Binary</fullName>
                </value>
                <value>
                    <fullName>Prefer Not To Say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Greeting__c</fullName>
        <label>Greeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instagram__c</fullName>
        <label>Instagram</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Opportunity_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Opportunity Id</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Letter_Salutation__c</fullName>
        <label>Letter Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Contacts (Level)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marital_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Accounting, Banking and Financial Services</fullName>
                </value>
                <value>
                    <fullName>Administration and Human Resources</fullName>
                </value>
                <value>
                    <fullName>Advertising, Public Relations, Media and Arts</fullName>
                </value>
                <value>
                    <fullName>Agriculture, Animal and Horticulture</fullName>
                </value>
                <value>
                    <fullName>Automotive, Transport and Logistics</fullName>
                </value>
                <value>
                    <fullName>Construction, Architecture and Design</fullName>
                </value>
                <value>
                    <fullName>Education and Training</fullName>
                </value>
                <value>
                    <fullName>Electrical and Electronics</fullName>
                </value>
                <value>
                    <fullName>Engineers and Engineering Trades</fullName>
                </value>
                <value>
                    <fullName>Executive and General Management</fullName>
                </value>
                <value>
                    <fullName>Government, Defence and Protective Services</fullName>
                </value>
                <value>
                    <fullName>Health and Community Services</fullName>
                </value>
                <value>
                    <fullName>Hospitality, Food Services and Tourism</fullName>
                </value>
                <value>
                    <fullName>Information and Communication Technology (ICT)</fullName>
                </value>
                <value>
                    <fullName>Legal and Insurance</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Mining and Energy</fullName>
                </value>
                <value>
                    <fullName>Personal Services</fullName>
                </value>
                <value>
                    <fullName>Sales, Retail, Wholesale and Real Estate</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Sport and Recreation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>One_Drive_Folder_Name__c</fullName>
        <formula>Contact_ID__c + &apos;_dev&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Drive Folder Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Bequest_Pledged_Count__c</fullName>
        <label>Opportunity Bequest Pledged Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Major_Gift_Closed_Won_Count__c</fullName>
        <label>Opportunity Major Gift Closed Won Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Member_Active_Count__c</fullName>
        <label>Opportunity Member Active Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Raffle_Ticket_Count__c</fullName>
        <label>Opportunity Raffle Ticket Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Contacts (Previous Level)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Names__c</fullName>
        <label>Previous Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Preference__c</fullName>
        <label>Receipt Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email Receipt</fullName>
                </value>
                <value>
                    <fullName>Postal Receipt</fullName>
                </value>
                <value>
                    <fullName>No Receipt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Active_Count__c</fullName>
        <label>Recurring Donation Active Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skype__c</fullName>
        <label>Skype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>EOI Submitted</fullName>
                </value>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>In Country Dependant</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Returned Volunteer</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_Bequest_Opp_Amount_Outstanding__c</fullName>
        <label>Sum Bequest Opp Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_Bequest_Opp_Payments_Made__c</fullName>
        <label>Sum Bequest Opp Payments Made</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Individual</fullName>
        <active>true</active>
        <description>Record Type used to capture details about a RSPCA supporter.</description>
        <label>Individual</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_Preferred_Email</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( npe01__Preferred_Email__c ,&quot;&quot;),
OR(
LEN(npe01__AlternateEmail__c  )&gt;0,
LEN(npe01__WorkEmail__c )&gt;0,
LEN(npe01__HomeEmail__c  )&gt;0
)
)</errorConditionFormula>
        <errorDisplayField>npe01__Preferred_Email__c</errorDisplayField>
        <errorMessage>Please select a Preferred Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Preferred_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL(npe01__PreferredPhone__c ,&quot;&quot;),
OR(
 LEN(MobilePhone)&gt;0,
 LEN( npe01__WorkPhone__c)&gt;0,
 LEN( OtherPhone )&gt;0
)
)</errorConditionFormula>
        <errorDisplayField>npe01__PreferredPhone__c</errorDisplayField>
        <errorMessage>Please select a Preferred Phone</errorMessage>
    </validationRules>
</CustomObject>